--- a/qt5/qt5-quick3d/PKGBUILD
+++ b/qt5/qt5-quick3d/PKGBUILD
@@ -5,19 +5,21 @@
 pkgname=qt5-quick3d
 _qtver=5.15.2
 pkgver=5.15.2+kde+r19
-pkgrel=1
+pkgrel=3
 _commit=3e3e53c834b25dc2959dd30f319d12d6f84ee1e3
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
-license=('GPL3' 'LGPL3' 'FDL' 'custom')
+license=('GPL3')
 pkgdesc='Qt module and API for defining 3D content in Qt Quick'
 depends=('qt5-declarative')
-makedepends=('assimp' 'git')
-optdepends=('assimp: Import from assimp')
+makedepends=('git' 'assimp')
+optdepends=('assimp: assimp import plugin')
 groups=('qt' 'qt5')
 _pkgfqn=qtquick3d
-source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit)
-sha256sums=('SKIP')
+source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit
+        qt5-quick3d-assimp-5.1.patch)
+sha256sums=('SKIP'
+            '57a3ac54c46f86d1f99ce20653bb34215cbd65fbd36f7ee802360336e88f268e')
 
 pkgver() {
   cd $_pkgfqn
@@ -29,6 +31,8 @@ prepare() {
 
   cd $_pkgfqn
   git revert -n 80196af36528e66826549a8b54d6cc5988db1622 # Revert version bump
+
+  patch -p1 < ../qt5-quick3d-assimp-5.1.patch # Fix build with assimp 5.1
 }
 
 build() {
