--- a/qt5/qt5-script/PKGBUILD
+++ b/qt5/qt5-script/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-script
-_qtver=5.15.6
+_qtver=5.15.8
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='Classes for making Qt applications scriptable. Provided for Qt 4.x compatibility'
@@ -16,6 +16,7 @@ groups=('qt' 'qt5')
 _pkgfqn=${pkgname/5-/}
 source=(git+https://code.qt.io/qt/$_pkgfqn.git#tag=v${pkgver}-lts)
 sha256sums=('SKIP')
+options=(!lto)
 
 prepare() {
   mkdir -p build
@@ -24,7 +25,8 @@ prepare() {
 build() {
   cd build
 
-  qmake ../${_pkgfqn}
+# Disable LTO, see FS#73264
+  qmake ../${_pkgfqn} CONFIG-=ltcg
   make
 }
 
