--- a/openshadinglanguage/PKGBUILD
+++ b/openshadinglanguage/PKGBUILD
@@ -1,7 +1,7 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 pkgname=openshadinglanguage
-pkgver=1.11.14.2
+pkgver=1.11.17.0
 pkgrel=1
 pkgdesc="Advanced shading language for production GI renderers"
 arch=(x86_64 powerpc64le)
@@ -12,7 +12,7 @@ depends=('boost-libs' 'openimageio' 'imath' 'freetype2' 'libpng'
 makedepends=('boost' 'cmake' 'python' 'llvm' 'ninja')
 optdepends=('python: the Python module')
 source=($pkgname-$pkgver.tar.gz::https://github.com/imageworks/OpenShadingLanguage/archive/Release-${pkgver}.tar.gz)
-sha512sums=('9ff36bb25c1096f533f4776099d3508ae8af26f02d3147a85d8715c4565ab3ca4d9f208ebb046a535b8a714a9722660edc13dbcceb3a9be5c1dd8235e3b613d8')
+sha512sums=('14cb25b10f4644551b906344a289e2a4c421f4c85beaa120bb1a1e532c9be3ec235622516c4700fb23d258c5dcd1ece18b84491b0973b3162098843a9059b1d2')
 
 build() {
   cd OpenShadingLanguage-Release-$pkgver
