--- a/go/go/PKGBUILD
+++ b/go/go/PKGBUILD
@@ -1,5 +1,6 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
+# Contributor: Daniel Martí <mvdan@mvdan.cc>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Contributor: Alexander F. Rødseth <xyproto@archlinux.org>
 # Contributor: Pierre Neidhardt <ambrevar@gmail.com>
@@ -14,10 +15,10 @@
 
 pkgname=go
 epoch=2
-pkgver=1.17.1
-pkgrel=1
+pkgver=1.17.6
+pkgrel=2
 pkgdesc='Core compiler tools for the Go programming language'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://golang.org/'
 license=(BSD)
 makedepends=(git go perl)
@@ -26,33 +27,24 @@ provides=(go-pie)
 options=(!strip staticlibs)
 source=(https://storage.googleapis.com/golang/go$pkgver.src.tar.gz{,.asc})
 validpgpkeys=('EB4C1BFD4F042F6DDDCCEC917721F63BD38B4796')
-sha256sums=('49dc08339770acd5613312db8c141eaf61779995577b89d93b541ef83067e5b1'
+sha256sums=('4dc1bbf3ff61f0c1ff2b19355e6d88151a70126268a47c761477686ef94748c8'
             'SKIP')
 
-case "${CARCH}" in
-  x86_64) export GOARCH=amd64 ;;
-  powerpc64le) export GOARCH=ppc64le ;;
-esac
-
 build() {
+  case "${CARCH}" in
+    x86_64) export GOARCH=amd64 ;;
+    powerpc64le) export GOARCH=ppc64le ;;
+  esac
+
+  export GOAMD64=v1 # make sure we're building for the right x86-64 version
   export GOROOT_FINAL=/usr/lib/go
   export GOROOT_BOOTSTRAP=/usr/lib/go
-  export GOPATH="$srcdir/"
-  export GOROOT="$srcdir/$pkgname"
-  export GOBIN="$GOROOT/bin"
 
   cd "$pkgname/src"
-  ./make.bash --no-clean -v
-
-  PATH="$GOBIN:$PATH" go install -v std
+  ./make.bash -v
 }
 
 check() {
-  export GOROOT_FINAL=/usr/lib/go
-  export GOROOT_BOOTSTRAP=/usr/lib/go
-  export GOROOT="$srcdir/$pkgname"
-  export GOBIN="$GOROOT/bin"
-  export PATH="$srcdir/$pkgname/bin:$PATH"
   export GO_TEST_TIMEOUT_SCALE=3
 
   cd $pkgname/src
@@ -65,11 +57,7 @@ package() {
   install -d "$pkgdir/usr/bin" "$pkgdir/usr/lib/go" "$pkgdir/usr/share/doc/go" \
     "$pkgdir/usr/lib/go/pkg/linux_amd64_"{dynlink,race}
 
-  # TODO: Make split package for source files?
-  # This saves around 100 MB.
-  # Rest of the size is from the duplicate _race and _dynlib .a files
-  # cp -a bin pkg src lib misc api test "$pkgdir/usr/lib/go"
-  cp -a bin pkg src lib "$pkgdir/usr/lib/go"
+  cp -a bin pkg src lib misc api test "$pkgdir/usr/lib/go"
   cp -r doc/* "$pkgdir/usr/share/doc/go"
 
   ln -sf /usr/lib/go/bin/go "$pkgdir/usr/bin/go"
@@ -82,8 +70,6 @@ package() {
 
   # TODO: Figure out if really needed
   rm -rf "$pkgdir"/usr/lib/go/pkg/obj/go-build/*
-  find "$pkgdir/usr/lib/go" -name "testdata" -type d -prune -exec rm -rf "{}" \;
-  find "$pkgdir/usr/lib/go" -name "*_test.go" -exec rm -rf "{}" \;
 
   install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
