--- a/go/containers-common/PKGBUILD
+++ b/go/containers-common/PKGBUILD
@@ -3,26 +3,26 @@
 
 pkgname=containers-common
 pkgver=0.46.0
-pkgrel=2
-_image_pkgver=5.16.0
-_podman_pkgver=3.4.0
-_skopeo_pkgver=1.4.1
+pkgrel=8
+_image_pkgver=5.17.0
+_podman_pkgver=3.4.4
+_skopeo_pkgver=1.5.2
 _storage_pkgver=1.37.0
 pkgdesc="Configuration files and manpages for containers"
-arch=('any')
+arch=(any)
 url="https://github.com/containers"
-license=('Apache')
-makedepends=('go-md2man')
+license=(Apache)
+makedepends=(go-md2man)
 backup=(
-  'etc/containers/containers.conf'
-  'etc/containers/mounts.conf'
-  'etc/containers/policy.json'
-  'etc/containers/registries.conf'
-  'etc/containers/seccomp.json'
-  'etc/containers/storage.conf'
+  etc/containers/containers.conf
+  etc/containers/mounts.conf
+  etc/containers/policy.json
+  etc/containers/registries.conf
+  etc/containers/seccomp.json
+  etc/containers/storage.conf
 )
 # configuration override directories need to exist
-options=('emptydirs')
+options=(emptydirs)
 source=("common-${pkgver}.tar.gz::https://github.com/containers/common/archive/v${pkgver}.tar.gz"
         "image-${_image_pkgver}.tar.gz::https://github.com/containers/image/archive/v${_image_pkgver}.tar.gz"
         "podman-${_podman_pkgver}.tar.gz::https://github.com/containers/podman/archive/v${_podman_pkgver}.tar.gz"
@@ -31,15 +31,15 @@ source=("common-${pkgver}.tar.gz::https://github.com/containers/common/archive/v
         'mounts.conf'
 )
 sha512sums=('e4406b8996e0ae374c463433ce00a392c1ca8259b512a324845e0332bf925284f71d92071eb1d511c00070b3ab41318fbe08bf47d98a6404e7c6d4231143be48'
-            '6557add397ca6c9a1d7888fb1e5ee38734770746d14c9a65af58778cf180793dccf6d28cf697ece23ae3dd30086be880dc2868c82b5274dc13e49b09615e31ef'
-            '195354b15beaaed19b4d5f71f5dbfcd1ebfc5c80c07db91043b76e3254d62b5fd001c52c536773656e5eba65954511c1639a50b955a9992fa4d18a55e573c2a1'
-            '71185f772293696a068ccbdf79b9452248a66123a6df3b6f9e4c475d8787ef2c72d3b95bd6efa23044dfcc884f92a7cb704328a6a258439f331fd7e5ac607c30'
+            '20dabc2a8931c97f94bf53c845e5fe4a6ddc13d255d266e4b6181f9ee6970fae50075ddfedeb0d023344310e68cea91b3d6cecc50c59757c0702e05b9442c294'
+            'cfd295bf50ce86ea70741c3e663b409ed47b1e560c962bc579f319151a0fe2b24cdd3045667660083cce89449a9c5de1508c94a9a02375165a72ce7c16166666'
+            '7f1dfa41e4fa6a145187413252672b12e59a11ce445d9d5c47c78c4dbb8aa4ffe6925bea20b11034e40725fdb2ac5eacfbb646e7b8cfdd11f07bbb6fc020dda7'
             '3a65a50946e1eed1c79ea77b65feb1c6c8cf58a0b7b81932acb8891b6daa25e007582eb7f70ef7e7f2a6d8262be5db7757ead2fe079e47c99114b47917d81084'
             '11fa515bbb0686d2b49c4fd2ab35348cb19f9c6780d6eb951a33b07ed7b7c72a676627f36e8c74e1a2d15e306d4537178f0e127fd3490f6131d078e56b46d5e1')
 b2sums=('9a6c5ad52a91d3186aceba301f36dbc9e98088a71a0c2babe119837b25381461bb92b52f16f1b4c6696e9449c502ef87e5026cac6d295d8398a8a68eda3a3ec0'
-        '7ec4a487cfa10062e2de26bf892aa6379c38f71ed236dc69d4de30a02e2ce3bdf4be971d3729447876c834185f4c41ee54ea35f0382df4792509fad01e0a2182'
-        '4a96b9be980f336bc7cfa6efa0f955da90b67e1ff3e45c34097b9eb4fcd611b3454860048410238aeb1063331b246e9c156f738813e7f585d2254a1568d20642'
-        '90868ecca35e35c73b56ff669b9e38e8b3a5c5094652ba3f0af04b2b76380f0ce0153621cac56cfb921639b23878cb865779f4ed180d4cf6eb2d2a423bfbaff7'
+        '13a1268f2b7229245b3ecebb6d4b3a410a551ae9dc926e66d224ce8ae537dc74aac14be831797de662dc244eb0a72e476e0ce0c7b79f15a7fe1684ebaf149c5a'
+        '3de69c9bc3bd1334837d21cb2817a9e9757fbb561a0b047658c7401608ecf1fbe09d5cd0c65497a82150a67a3775c77705d0dbd314a54f7b3a1953733cfb2906'
+        '009f820d0784ae098d434418e126d4cc7318bbef72839b0438073eee02c4644195a6c5108334b3c1efd3e5c655035460994b151e5f4f3f30ae3046a31eab27b2'
         'ebe5c8e562149a9d007ac87d7fc615d29ad7decbfd6b1b8d919b14684a6341575d8f65080a808ba52674664d187a18bb47e88f10e1a02a2975898862873dadf9'
         '2f4b0af3271103362a898e7fcc3ec05f06755902ad664ac3107bb8debb8b2ac0d50de311d5fc651279a817a56e3ff05864a7e77c0d8fc628ff7411bfb98c9b69')
 
