--- a/go/terraform/PKGBUILD
+++ b/go/terraform/PKGBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Daurnimator <daurnimator@archlinux.org>
 
 pkgname=terraform
-pkgver=1.0.8
+pkgver=1.1.3
 pkgrel=1
 pkgdesc="HashiCorp tool for building and updating infrastructure as code idempotently"
 url="https://www.terraform.io/"
@@ -12,19 +12,24 @@ arch=(x86_64 powerpc64le)
 license=("MPL")
 makedepends=("go")
 depends=('glibc')
+options=('!lto')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/hashicorp/terraform/archive/v$pkgver.tar.gz"
         "terraform.bash"
         "terraform.fish"
         "terraform.zsh")
-sha512sums=('8c3717da882c7ec9c71c4181f09f977eee8e374bb2b09b1974f82d5e0bbd74a97cacc7789c8317c01fa8b7bfca397ca2e1d7e3c14ef88aba43c5d2246dffeb6d'
+sha512sums=('b79f284acefeb1f45b2181bf05bbb29ab8a94cd05d6e1b744db3cb7c836b36f10600c2b06df99563f1a151adf5ed14b690baaa1c4254720a08cb161d97240c25'
             'ea42bfc41288e5ad741fcddfbd5c1f8ba0088be0967b820db1e12e1dc13d1ba242b9cc1c247bf29c36ec59cdce76ff6703cf6b3f76cca5ec441a4927a01afe7d'
             '44b387fbd7b6abb8f524999d3d5f14fd4d5be54b2b34336a708c6a493c93c886a7230d3102601604f62cf95c53e91de683919213d0e1473ee84e606030d249e3'
             'ad991daf40f68c11fa66256177a04d97bd38d6a89c554d6261489d4de703852628ffc37429d862237ca24e15f6a7c915cfa027731189ac89a27f7b20c72ab4c9')
-b2sums=('b6580190cc0b600c6d790dbb162b25b01ac2f024a67bce13f82fd99dce3b32d80b5fd52d757df4f890675ccda9e5a01d232cada678fe91879c72383bc8ef3ce1'
+b2sums=('e96f6ae3933331c05a3a7b802b17d4b62a276610b6c2cf0f60fb9ee39f817d8887868ae991d5abe144edc0bdda949b242011c93ed68c3eea7ec8ea36d85d4e81'
         'd047735bbb006e9afbaa4b18af7a7f16a205ec528e91caa61a0b663dd6e24ec1df999216f0b7bd06e3b3c087b37f6ce3aa3cf3a20c892a9cc1962d33ce1b0bcc'
         'd3655f23ba8893d0f8c6cd5e8b42fae473ccfbc77d97b7424aa1f0d0057bfed6cb4d2505e74dd89099c39af6bc03b92eddedae5bb2821ff905d06b5e311be1f0'
         'd58712c8203e4a58ec68738f3d22457547a55d230018408400fd1ca433346171b72fa4a87f05efc93213c71f9757d3a8072149ca4e6894355e79f8cfae3bd55b')
-changelog="CHANGELOG.md"
+
+prepare() {
+	cd "$pkgname-$pkgver"
+	go mod download
+}
 
 build() {
 	cd "$pkgname-$pkgver"
@@ -33,6 +38,7 @@ build() {
 	export CGO_CXXFLAGS="${CXXFLAGS}"
 	export CGO_LDFLAGS="${LDFLAGS}"
 	export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
+	export GOPROXY=off
 	go build -o terraform-binary
 }
 
