--- a/kde/kdeplasma-addons/PKGBUILD
+++ b/kde/kdeplasma-addons/PKGBUILD
@@ -4,23 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdeplasma-addons
-pkgver=5.23.1
+pkgver=5.23.5
 pkgrel=1
 pkgdesc='All kind of addons to improve your Plasma experience'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(plasma-workspace)
-makedepends=(extra-cmake-modules kross kunitconversion)
-makedepends_powerpc64le=(qt5-webengine)
-makedepends_x86_64=(qt5-webengine)
+depends=(plasma-workspace kunitconversion)
+makedepends=(extra-cmake-modules qt5-webengine)
 optdepends=('purpose: Quickshare applet'
-            'quota-tools: disk quota applet')
-optdepends_powerpc64le=('qt5-webengine: dictionary and webbrowser applets')
-optdepends_x86_64=('qt5-webengine: dictionary and webbrowser applets')
+            'quota-tools: disk quota applet'
+            'qt5-webengine: dictionary and webbrowser applets')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('84ee5a39458f767cb0f1304bcffa556e99119b7d6ae7556b0c310c2284ccd988'
+sha256sums=('78da1e66da03aa8b34dfef2075655645e9bef1af59671080089bcf8c2d7a0033'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
