--- a/kde/kinfocenter/PKGBUILD
+++ b/kde/kinfocenter/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kinfocenter
-pkgver=5.23.1
+pkgver=5.23.5
 pkgrel=1
 pkgdesc='A utility that provides information about a computer system'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(systemsettings glu vulkan-tools wayland-utils)
+depends=(systemsettings glu vulkan-tools wayland-utils procps-ng)
 makedepends=(extra-cmake-modules plasma-framework kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e12f892612a4be07945b85df90463f7e0c36d24159393d4f60279aa97605c904'
+sha256sums=('67ae1e26b98a3efdeab6a0741bef9948410da6bee63692189535def0de98f138'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
