--- a/kde/libksysguard/PKGBUILD
+++ b/kde/libksysguard/PKGBUILD
@@ -4,21 +4,19 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libksysguard
-pkgver=5.23.1
+pkgver=5.23.5
 pkgrel=1
 pkgdesc='Library to retrieve information on the current status of computer hardware'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(libxres kdeclarative knewstuff)
-depends_powerp64le=(qt5-webengine)
-depends_x86_64=(qt5-webengine)
+depends=(libxres qt5-webengine kdeclarative knewstuff)
 makedepends=(extra-cmake-modules kdoctools qt5-tools)
 conflicts=('ksysguard<5.21.90')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
 install=libksysguard.install
-sha256sums=('083ddf436a9678e6e3d9c900d2c974586a313e58f60a32b7cb6600338ec78189'
+sha256sums=('3030a6d579b8c2bd713677f1bd32dafaaf8ff2237b8be2177d7c9f3f677ec1bf'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
