--- a/sdl2/PKGBUILD
+++ b/sdl2/PKGBUILD
@@ -1,65 +1,43 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
-
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 pkgname=sdl2
-pkgver=2.0.16
-pkgrel=4
+pkgver=2.0.20
+pkgrel=1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard (Version 2)"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.libsdl.org"
 license=('MIT')
-depends=('glibc' 'libxext' 'libxrender' 'libx11' 'libgl' 'libxcursor' 'hidapi' 'libusb')
+depends=('glibc' 'libxext' 'libxrender' 'libx11' 'libgl' 'libxcursor' 'libibus' 'hidapi' 'libusb')
 makedepends=('alsa-lib' 'mesa' 'libpulse' 'libxrandr' 'libxinerama' 'wayland' 'libxkbcommon'
-             'wayland-protocols' 'fcitx' 'libxss' 'cmake' 'jack' 'ninja' 'pipewire'
+             'wayland-protocols' 'ibus' 'fcitx' 'libxss' 'cmake' 'jack' 'ninja' 'pipewire'
              'libdecor')
 optdepends=('alsa-lib: ALSA audio driver'
             'libpulse: PulseAudio audio driver'
             'jack: JACK audio driver'
             'pipewire: PipeWire audio driver'
             'libdecor: Wayland client decorations')
-source=("https://www.libsdl.org/release/SDL2-${pkgver}.tar.gz"{,.sig}
-        https://github.com/libsdl-org/SDL/commit/25cd749adba77e1a6f3f31f80f8768c0aaaad5b0.patch)
-sha512sums=('ec75ef8526792650c2647b78bb0244f973774418aeae33a2182d90ce696b30acb652f8be9c2012a16c1c5d5622f7630ff2e1eadae27ea3dc78ab47730cf5e62f'
-            'SKIP'
-            '51f47912bab0ccd3688233eb93f34f93ecc3638182864d4abf7ae092fda089e9332e5d7213692a1f9f7ed765d6a51d6fac98c22aee3cefe68298bfd3c2f09c82')
+source=("https://www.libsdl.org/release/SDL2-${pkgver}.tar.gz"{,.sig})
+sha512sums=('4889949eaa674948bdb0a01bb2a842a0943b15b08ff27ec0079b0fd4f79d071ffb32488a5a51c12ad7c74ed5fe73b608cdf6336a44c95dae8a0fb3f47d0f01de'
+            'SKIP')
 validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga
 
-prepare() {
-  cd SDL2-${pkgver}
-  # Fix FS#72299
-  patch -Np1 -i "$srcdir"/25cd749adba77e1a6f3f31f80f8768c0aaaad5b0.patch
-}
-
 build() {
-  cd SDL2-${pkgver}
-  cmake \
-      -Bbuild \
-      -GNinja \
-      -DCMAKE_INSTALL_PREFIX=/usr \
-      -DSDL_STATIC=OFF \
-      -DSDL_DLOPEN=ON \
-      -DARTS=OFF \
-      -DESD=OFF \
-      -DNAS=OFF \
-      -DALSA=ON \
-      -DHIDAPI=ON \
-      -DPULSEAUDIO_SHARED=ON \
-      -DVIDEO_WAYLAND=ON \
-      -DRPATH=OFF \
-      -DCLOCK_GETTIME=ON \
-      -DJACK_SHARED=ON \
-      -DPIPEWIRE=OFF \
-      -DPIPEWIRE_SHARED=OFF
-  ninja -C build
+  CFLAGS+=" -ffat-lto-objects"
+  cmake -S SDL2-${pkgver} -B build -G Ninja \
+    -D CMAKE_INSTALL_PREFIX=/usr \
+    -D SDL_STATIC=OFF \
+    -D SDL_DLOPEN=ON \
+    -D SDL_RPATH=OFF
+  cmake --build build
 }
 
 package() {
-  cd SDL2-${pkgver}
-  DESTDIR="${pkgdir}" ninja -C build install
+  DESTDIR="${pkgdir}" cmake --install build
 
+  # For some reason, this isn't named correctly and we have to fix it to reflect the actual staticlib name.
   sed -i "s/libSDL2\.a/libSDL2main.a/g" "$pkgdir"/usr/lib/cmake/SDL2/SDL2Targets-noconfig.cmake
 
-  install -Dm644 LICENSE.txt "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  install -Dm644 SDL2-${pkgver}/LICENSE.txt "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
 
-# vim: ts=2 sw=2 et:
+# vim:set ts=2 sw=2 et:
