--- a/ffmpeg/PKGBUILD
+++ b/ffmpeg/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=ffmpeg
 pkgver=5.0
-pkgrel=1
+pkgrel=3
 epoch=2
 pkgdesc='Complete solution to record, convert and stream audio and video'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -173,6 +173,7 @@ build() {
     --enable-libopus \
     --enable-libpulse \
     --enable-librav1e \
+    --enable-librsvg \
     --enable-libsoxr \
     --enable-libspeex \
     --enable-libsrt \
