--- a/cbindgen/PKGBUILD
+++ b/cbindgen/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=0.20.0
 pkgrel=1
 pkgdesc="A tool for generating C bindings to Rust code"
 url="https://github.com/eqrion/cbindgen"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(MPL2)
 depends=(gcc-libs)
 makedepends=(rust git)
