--- a/spglib/PKGBUILD
+++ b/spglib/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=spglib
-pkgver=1.16.2
+pkgver=1.16.3
 pkgrel=1
 pkgdesc='C library for finding and handling crystal symmetries'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://atztogo.github.io/spglib/'
 license=(custom)
 depends=(glibc)
 makedepends=(cmake)
 source=(https://github.com/atztogo/spglib/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('5723789bee7371ebba91d78c729d2a608f198fad5e1c95eebe18fda9f2914ec8')
+sha256sums=('1dfe313b460f71de90ee8a01d9f2cd250cd59e16836e1bf64924500dd2aa7dc6')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
