--- a/openbabel/PKGBUILD
+++ b/openbabel/PKGBUILD
@@ -6,9 +6,9 @@
 pkgbase=openbabel
 pkgname=(openbabel python-openbabel)
 pkgver=3.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A library designed to interconvert between many file formats used in molecular modeling and computational chemistry"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://openbabel.org/wiki/Main_Page"
 license=('GPL')
 makedepends=('cmake' 'eigen' 'wxgtk3' 'boost' 'python' 'swig' 'maeparser' 'rapidjson' 'coordgen')
