--- a/libmsym/PKGBUILD
+++ b/libmsym/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=libmsym
 pkgver=0.2.3
-pkgrel=5
+pkgrel=7
 pkgdesc="Molecular point group symmetry lib"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.openchemistry.org/"
 license=(MIT)
 depends=(glibc)
