--- a/molequeue/PKGBUILD
+++ b/molequeue/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=molequeue
 pkgver=0.9.0
 pkgrel=2
 pkgdesc="Desktop integration of high performance computing resources"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.openchemistry.org/"
 license=(custom)
 depends=(qt5-base)
