--- a/openlibm/PKGBUILD
+++ b/openlibm/PKGBUILD
@@ -4,15 +4,15 @@
 # Contributor: Arthur Zamarin <arthurzam@gmail.com>
 
 pkgname=openlibm
-pkgver=0.7.5
+pkgver=0.8.1
 pkgrel=1
 pkgdesc='Standalone implementation of C mathematical functions'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://openlibm.org/'
 license=(BSD)
 depends=(glibc)
 source=("$pkgname-$pkgver.tar.gz::https://github.com/JuliaLang/$pkgname/archive/v$pkgver.tar.gz")
-sha256sums=('be983b9e1e40e696e8bbb7eb8f6376d3ca0ae675ae6d82936540385b0eeec15b')
+sha256sums=('ba8a282ecd92d0033f5656bb20dfc6ea3fb83f90ba69291ac8f7beba42dcffcf')
 
 prepare() {
   cd $pkgname-$pkgver
