--- a/openblas/PKGBUILD
+++ b/openblas/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=openblas
 _pkgname=OpenBLAS
-pkgver=0.3.17
+pkgver=0.3.19
 pkgrel=1
 pkgdesc="An optimized BLAS library based on GotoBLAS2 1.13 BSD"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.openblas.net/"
 license=('BSD')
 depends=('gcc-libs')
@@ -16,14 +16,15 @@ checkdepends=('cblas')
 provides=('blas=3.9.0')
 conflicts=('blas')
 source=(${_pkgname}-v${pkgver}.tar.gz::https://github.com/xianyi/OpenBLAS/archive/v${pkgver}.tar.gz)
-sha512sums=('a97745c1f050ea44fce5f1722810de469612d374a29796a874d12673d6ad189872160cc2b5d0885790e6562d9d7ade629144c86f2649e668b0d4def36aa74495')
+sha512sums=('1fcbcfefb7744894b0b0c83c6071b342086ca311dc67f5c2745812d61dcc9d31ef7dd5e1215dfb2731ae7197d497dbdf8f8b26a432eb07d41a7db0983eb86a33')
 
 build() {
   cd $_pkgname-$pkgver
 
   case "${CARCH}" in
     powerpc64le) PLATFORM_FLAGS="TARGET=POWER8 DYNAMIC_ARCH=1" ;;
-    powerpc)     PLATFORM_FLAGS="TARGET=PPCG4";;
+    powerpc)     PLATFORM_FLAGS="TARGET=PPCG4" ;;
+    riscv64)     PLATFORM_FLAGS="TARGET=RISCV64_GENERIC DYNAMIC_ARCH=1" ;;
     x86_64)      PLATFORM_FLASG="TARGET=CORE2 DYNAMIC_ARCH=1" ;;
   esac
 
