--- a/monero/PKGBUILD
+++ b/monero/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: kpcyrd <kpcyrd[at]archlinux[dot]org>
 
 pkgname=monero
-pkgver=0.17.2.0
-_commit=f6e63ef260e795aacd408c28008398785b84103a
-pkgrel=5
+pkgver=0.17.3.0
+_commit=ab18fea3500841fc312630d49ed6840b3aedb34d
+pkgrel=3
 pkgdesc="Monero: the secure, private, untraceable peer-to-peer currency"
 license=('BSD')
 arch=(x86_64 powerpc64le powerpc)
@@ -15,13 +15,12 @@ source=(
     "${pkgname}"::"git+https://github.com/monero-project/monero?signed#commit=${_commit}"
     "git+https://github.com/monero-project/unbound.git"
     "git+https://github.com/monero-project/supercop.git"
-    "git+https://github.com/monero-project/miniupnp.git"
+    "git+https://github.com/miniupnp/miniupnp.git"
     "git+https://github.com/Tencent/rapidjson.git"
     "git+https://github.com/trezor/trezor-common.git"
     "git+https://github.com/tevador/randomx.git"
     "monero.sysusers"
-    "monero.tmpfiles"
-    monero-boost1.76.patch::https://github.com/selsta/monero/commit/c28d2f7c.patch)
+    "monero.tmpfiles")
 sha512sums=('SKIP'
             'SKIP'
             'SKIP'
@@ -30,8 +29,7 @@ sha512sums=('SKIP'
             'SKIP'
             'SKIP'
             '2e4ecf3f305dab46e166f50c0451dd969927b485df544aebcf8115a65444573e6d57a8ac6bea64ce5ab4b5cce2c70f913d9ac3bce561c59acf89851edc76a22c'
-            'ae3c300548e6ba5fdf6a203146e5dcaf1955c3e19820c0bb3a73bb70ec5629a3af00d43dac95b6f3832ded5c480e872d829981a63206016d4a64f3940b713357'
-            'c67ab4d4e7449d3690663647aa14411cce90ded9c9aa8bcd600ddbd3cd7633b3f5ec346c3c3c587951e9b1c380c99490764d70421ee0a9abb0fcc470e1f76c48')
+            'ae3c300548e6ba5fdf6a203146e5dcaf1955c3e19820c0bb3a73bb70ec5629a3af00d43dac95b6f3832ded5c480e872d829981a63206016d4a64f3940b713357')
 validpgpkeys=(
   '8777AB8F778EE89487A2F8E7F4ACA0183641E010' # luigi1111 <luigi1111w@gmail.com>
   'BDA6BD7042B721C467A9759D7455C5E3C0CDCEB9' # Riccardo Spagni <ric@spagni.net>
@@ -48,15 +46,13 @@ prepare() {
   git config submodule.external/trezor-common.url "$srcdir/trezor-common"
   git config submodule.external/randomx.url "$srcdir/randomx"
   git submodule update
-
-  patch -p1 < ../monero-boost1.76.patch # Fix build with boost 1.76
 }
 
 build() {
   cd "${pkgname}"
 
   case "${CARCH}" in
-    powerpc) EXTRA_CMAKE_FLAGS="-DCMAKE_CXX_FLAGS='${CXXFLAGS} -latomic'" ;;
+    powerpc) export CXXFLAGS+=" -latomic" ;;
   esac
 
   mkdir -p build && cd build
