--- a/monero-gui/PKGBUILD
+++ b/monero-gui/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: kpcyrd <kpcyrd[at]archlinux[dot]org>
 
 pkgname=monero-gui
-pkgver=0.17.2.2
-_commit=937cb9825672d07a1917d2d9daf823802ec31d1b
-pkgrel=3
+pkgver=0.17.3.1
+_commit=a959919b8ad798d1384f83c5bf3ed7a2d16dc8aa
+pkgrel=1
 pkgdesc="QT GUI wallet for Monero: the secure, private, untraceable peer-to-peer currency"
 license=('BSD')
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://getmonero.org/"
 depends=('monero' 'boost-libs' 'libunwind' 'openssl' 'readline' 'zeromq' 'pcsclite' 'hidapi' 'unbound' 'hicolor-icon-theme' 'libusb' 'libudev.so'
     'qt5-base' 'qt5-declarative' 'qt5-graphicaleffects' 'qt5-quickcontrols' 'qt5-quickcontrols2' 'qt5-svg' 'qt5-xmlpatterns')
@@ -16,13 +16,12 @@ source=(
     "git+https://github.com/monero-project/monero-gui?signed#commit=${_commit}"
     "git+https://github.com/monero-project/monero"
     "git+https://github.com/monero-project/unbound.git"
-    "git+https://github.com/monero-project/miniupnp.git"
+    "git+https://github.com/miniupnp/miniupnp.git"
     "git+https://github.com/Tencent/rapidjson.git"
     "git+https://github.com/trezor/trezor-common.git"
     "git+https://github.com/tevador/randomx.git"
     "git+https://github.com/monero-project/supercop.git"
     "monero-gui.desktop"
-    monero-boost1.76.patch::https://github.com/selsta/monero/commit/c28d2f7c.patch
 )
 sha512sums=('SKIP'
             'SKIP'
@@ -32,8 +31,7 @@ sha512sums=('SKIP'
             'SKIP'
             'SKIP'
             'SKIP'
-            '98b67aec60e492f0a220a156a110baf96862343d3802ec34347c70c7af671a1ae49ccaec218f2e8f81e153c433e9145ad2f55b8613ce6999fc2c87fbd81fd8e1'
-            'c67ab4d4e7449d3690663647aa14411cce90ded9c9aa8bcd600ddbd3cd7633b3f5ec346c3c3c587951e9b1c380c99490764d70421ee0a9abb0fcc470e1f76c48')
+            '98b67aec60e492f0a220a156a110baf96862343d3802ec34347c70c7af671a1ae49ccaec218f2e8f81e153c433e9145ad2f55b8613ce6999fc2c87fbd81fd8e1')
 validpgpkeys=(
   '8777AB8F778EE89487A2F8E7F4ACA0183641E010' # luigi1111 <luigi1111w@gmail.com>
   '487277A8BD0A209C16B700F3C64552D877C32479' # Alexander Blair (Snipa / Snipa22) <snipa@jagtech.io>
@@ -52,21 +50,19 @@ prepare() {
   git config submodule.external/randomx.url "$srcdir/randomx"
   git config submodule.external/supercop.url "$srcdir/supercop"
   git submodule update
-
-  patch -Np1 -i ../../monero-boost1.76.patch # Fix build with boost 1.76
 }
 
 build() {
   cd "${pkgname}"
   
   case "${CARCH}" in
-    powerpc) EXTRA_CMAKE_FLAGS="-DCMAKE_CXX_FLAGS='${CXXFLAGS} -latomic'" ;;
+    powerpc) export CXXFLAGS=" -latomic" ;;
   esac
 
   cmake . \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release \
-    -DARCH=default -DNO_AES=1 ${EXTRA_CMAKE_FLAGS}
+    -DARCH=default -DNO_AES=1
   make
 }
 
